--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                         <h1 class="m-0">
                             <a href="#">
                                 <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                                    <title>Shockwave</title>
+                                    <title>Hedghog</title>
                                     <defs>
                                         <radialGradient cy="0%" fx="50%" fy="0%" r="100%" id="logo-gradient">
                                             <stop stop-color="#FFF" offset="0%"></stop>
@@ -50,8 +50,8 @@
             <section class="hero text-light text-center">
                 <div class="container-sm">
                     <div class="hero-inner">
-                        <h1 class="hero-title h2-mobile mt-0 is-revealing" style="visibility: visible;">Shockwave (SHK) Cryptocurrency</h1>
-                        <p class="hero-paragraph is-revealing" style="visibility: visible;">Shockwave is a cyrptocurrency implemented using python and flask. We simplify the use of sending money by our user-friendly interface and efficient servers.</p>
+                        <h1 class="hero-title h2-mobile mt-0 is-revealing" style="visibility: visible;">Hedghog (HDG) Crypto</h1>
+                        <p class="hero-paragraph is-revealing" style="visibility: visible;">Hedghog is a cyrptocurrency implemented using python and flask. We simplify transactions by user-friendly interface and efficient servers.</p>
                         <p class="hero-cta is-revealing" style="visibility: visible;"><a class="button button-secondary button-shadow" href="/register">Get started now</a></p>
 
                     </div>
